--- a/index.html
+++ b/index.html
@@ -27,6 +27,25 @@
         </ul>
       </nav>
     </header>
+
+    <section id="hero">
+      <h2 class="hero-text">Handcrafted, home-made masterpieces</h2>
+      <form id="form" action="https://www.freecodecamp.com/email-submit">
+        <input
+          name="email"
+          id="email"
+          type="email"
+          placeholder="Enter your email address"
+          required=""
+        />
+        <input
+          id="submit"
+          type="submit"
+          value="Get Started"
+          class="btn font-big"
+        />
+      </form>
+    </section>
     <script src="js/index.js"></script>
   </body>
 </html>
