--- a/index.html
+++ b/index.html
@@ -133,6 +133,16 @@
         </div>
       </section>
 
+      <footer id="footer">
+        <ul>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <span>Copyright 2016, Original Trombones</span>
+      </footer>
+    </div>
+
     <script src="js/index.js"></script>
   </body>
 </html>
